--- a/docs/media.css
+++ b/docs/media.css
@@ -18,9 +18,17 @@ header{
     justify-content: space-between;
 }
 
+nav{
+    position: fixed;
+    height: 100%;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
 section{
-    height: 120vh;
-    width: 100%;
+    height: 100vh;
+    width: 80%;
 }
 
 article{
