--- a/docs/media.css
+++ b/docs/media.css
@@ -17,38 +17,64 @@ header{
     flex-direction: row;
     justify-content: space-between;
 }
-
 nav{
-    position: fixed;
-    height: 100%;
-    width: 20%;
+    border: 1px solid black;
+    border-bottom: none;
+    border-top: none;
+    padding: 10px;
+    position: absolute;
+    height: 76vh;
+    width: 15vw;
     display: flex;
     flex-direction: column;
+    justify-content: start;
 }
-
+nav>a{
+    text-decoration: none;
+    color: black;
+    height: 5vh;
+}
 section{
-    height: 100vh;
-    width: 80%;
-}
-
-article{
-    height: 85vh;
-    width: 100%;
-    padding-top: 10px;
+    padding-left: 20%;
+    position: relative;
+    height: 80vh;
+    width: 80vw;
     display: grid;
-    grid-template-rows: 2fr 80% 2fr 2fr 2fr 2fr;
-    grid-template-columns: 90%;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: 70% 1fr;
 }
 
-video{
+#telacentral{
+    height: 60vh;
+    width: 10vw;
+    display: grid;
+    grid-template-columns: 90% 1fr 1fr;
+    grid-template-rows: 92% 2fr;
+    justify-content: start;
+    align-content: start;
+}
+
+#videoprincipal{
     height: 100%;
-    width: 100%;
+    width: auto;
+    grid-column: span 3;
 }
 
+button{
+    width: 10vw;
+    justify-self: ;
+}
+#navdireita{
+    position: relative;
+    height: 80vh;
+    width: 20vw;
+    justify-self: right;
+}
+.videolateral{
+    height: auto;
+    width: 50%;
+}
 footer{
-    height: 10%;
+    height: 9vh;
     width: 100%;
     background-color: darkgray;
     font-weight: bold;
